# Maximus

./: .gitignore  back.bat  front.bat
backend/: .env  manage.py  pyproject.toml
backend/authentication/: admin.py  models.py  urls.py
backend/authentication/migrations/: 0001_initial.py  0002_alter_user_options_alter_user_username.py
backend/authentication/serializers/: __init__.py  login.py  user.py
backend/authentication/views/: __init__.py  login.py  logout.py  register.py
backend/backend/: settings.py  urls.py
backend/produtos/: admin.py  urls.py
backend/produtos/migrations/: 0001_initial.py
backend/produtos/models/: __init__.py  categoria.py  fabricante.py  produto.py
backend/produtos/serializers/: __init__.py  categoria.py  fabricante.py  produto.py
backend/produtos/views/: __init__.py  categoria.py  fabricante.py  produto.py
frontend/: package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  router.tsx
frontend/src/actions/: addProdutoAction.ts  loginAction.ts  logoutAction.ts  produtoAction.ts  registerAction.ts
frontend/src/api/: api.ts
frontend/src/components/: inputs.tsx
frontend/src/hooks/: useCategoria.tsx  useFabricante.tsx
frontend/src/layouts/: DefaultLayout.tsx
frontend/src/loader/: produtoLoader.ts
frontend/src/pages/: AddProdutos.tsx  Login.tsx  Produtos.tsx  Register.tsx  UpdateProdutos.tsx
frontend/src/props/: Inputs.ts  action.ts  button.ts  delete.ts  method.ts  modal.ts  produto.ts  user.ts
(+12 files in other folders)
